Fix Done button being cut off

--- a/Website2/static/css/style.css
+++ b/Website2/static/css/style.css
@@ -3,7 +3,7 @@ html, body {
 	font-family: "Lato-light";
 	margin: 0;
 	max-width: 100%;
-	max-height: 1300px;
+	height: 2000px;
 	overflow: hidden;
 }
 
